Added count of sessions analysis

--- a/allAnalysisChunksAnalytics.Rmd
+++ b/allAnalysisChunksAnalytics.Rmd
@@ -24,6 +24,7 @@ library(tidyverse)
 library(plotly)
 library(rmarkdown)
 library(knitr)
+library(scales)
 
 # Variables
 clientId <- Sys.getenv("APICLIENTID")
@@ -168,5 +169,43 @@ longEcommerceOverview <- ecommerceOverview %>% gather(metric, value, Transaction
 ggplot(longEcommerceOverview, aes(x = Date, y = value)) +
     geom_line() +
     facet_grid(metric~., scales = "free_y")
+
+```
+
+# Session Count
+
+```{r count of sessions, echo=FALSE, message=FALSE, eval=FALSE}
+
+sessionCount <- google_analytics(viewId, date_range = c(thirtyDaysAgo, yesterday), 
+                                 metrics = c('users','pageviews'),
+                                 dimensions = 'sessionCount')
+
+sessionCount$sessionCount <- as.numeric(sessionCount$sessionCount)
+sessionCount$bucket <- NA
+
+sessionCount[sessionCount$sessionCount == 1,"bucket"] <- '1'
+sessionCount[sessionCount$sessionCount == 2,"bucket"] <- '2'
+sessionCount[sessionCount$sessionCount == 3,"bucket"] <- '3'
+sessionCount[sessionCount$sessionCount == 4,"bucket"] <- '4'
+sessionCount[sessionCount$sessionCount == 5,"bucket"] <- '5'
+sessionCount[sessionCount$sessionCount == 6,"bucket"] <- '6'
+sessionCount[sessionCount$sessionCount == 7,"bucket"] <- '7'
+sessionCount[sessionCount$sessionCount == 8,"bucket"] <- '8'
+sessionCount[sessionCount$sessionCount == 9,"bucket"] <- '9'
+sessionCount[sessionCount$sessionCount > 9 & sessionCount$sessionCount < 26,"bucket"] <- '10 - 25' 
+sessionCount[sessionCount$sessionCount > 25 & sessionCount$sessionCount < 51,"bucket"] <- '26 - 50' 
+sessionCount[sessionCount$sessionCount > 50 & sessionCount$sessionCount < 101,"bucket"] <- '51 - 100' 
+sessionCount[sessionCount$sessionCount > 100,"bucket"] <- '> 100' 
+
+sessionCountGrouped <- sessionCount %>% group_by(bucket) %>% summarize(Users = sum(users), Pageviews = sum(pageviews)) %>%
+    gather(metric, value, Users:Pageviews)
+
+sessionCountGrouped$bucket <- factor(sessionCountGrouped$bucket, levels = c('1','2','3','4','5','6','7','8','9','10 - 25','26 - 50','51 - 100','> 100'))
+
+ggplot(sessionCountGrouped, aes(x = bucket, y = value)) +
+    geom_col() +
+    facet_grid(metric~., scales='free_y') +
+    scale_y_continuous(labels=comma) +
+    coord_flip() 
 
 ```
